fix display on tablet

--- a/src/components/About/_about.scss
+++ b/src/components/About/_about.scss
@@ -2,9 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  @include media('<=tablet') {
-    justify-content: center;
-  }
 
   &__content {
     width: 80%;
@@ -14,8 +11,6 @@
     align-items: center;
     @include media('<=tablet') {
       display: block;
-      align-items: flex-start;
-      width: 80%;
     }
     @include media('<=phone') {
       font-size: 1rem;
@@ -24,9 +19,11 @@
     &__title {
       font-size: 5rem;
       transform: rotate(-90deg);
+      @include media('<=tablet') {
+        transform: translateX(-2px);
+      }
       @include media('<=phone') {
         font-size: 3rem;
-        transform: translateX(-2px);
       }
     }
 
