--- a/src/components/Work/_work.scss
+++ b/src/components/Work/_work.scss
@@ -9,18 +9,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include media('<=tablet') {
+      display: block;
+    }
     @include media('<=phone') {
       font-size: 1rem;
-      display: block;
     }
 
     &__title {
       font-size: 5rem;
       transform: rotate(-90deg);
-      // transform: translateX(-5px);
+      @include media('<=tablet') {
+        transform: translateX(-5px);
+      }
       @include media('<=phone') {
-        font-size: 3rem;
         transform: translateX(-2px);
+        font-size: 3rem;
       }
     }
 
